# aoc23

./: .clang-tidy  CMakeLists.txt  README.md
d1/: main.cxx
d2/: main.cxx
d3/: main.cxx
d4/: main.cxx
d5/: main.cxx
d6/: main.cxx
